k8s/qa/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsu-app
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devsu-app
  template:
    metadata:
      labels:
        app: devsu-app
    spec:

      containers:
        - name: devsu-app
          image: ghcr.io/aleyamayab/devsu-demo-devops-python:develop-202602091505
          imagePullPolicy: Always
          command:
            - sh
            - -c
            - |
              echo "Starting Django..." &&
              python manage.py runserver 0.0.0.0:8000

          ports:
            - containerPort: 8000

          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false

          readinessProbe:
            httpGet:
              path: /api/health/
              port: 8000
            initialDelaySeconds: 40
            periodSeconds: 15

          livenessProbe:
            httpGet:
              path: /api/health/
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 20

          resources:
            requests:
              cpu: "150m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
